Add genre filter

--- a/poster_scrapper.ipynb
+++ b/poster_scrapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "4  //upload.wikimedia.org/wikipedia/en/0/0d/Aveng...  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,181 +211,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://www.wikidata.org/entity/Q27044293\n",
-      "26 //upload.wikimedia.org/wikipedia/en/9/9d/Disney_The_Lion_King_2019.jpg\n",
-      "http://www.wikidata.org/entity/Q24733929\n",
-      "38 //upload.wikimedia.org/wikipedia/en/thumb/8/89/Frozen_II_%282019_animated_film%29.jpg/220px-Frozen_II_%282019_animated_film%29.jpg\n",
-      "http://www.wikidata.org/entity/Q108671102\n",
-      "55 //upload.wikimedia.org/wikipedia/en/thumb/4/44/The_Super_Mario_Bros._Movie_poster.jpg/220px-The_Super_Mario_Bros._Movie_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q232009\n",
-      "61 //upload.wikimedia.org/wikipedia/en/d/df/Harry_Potter_and_the_Deathly_Hallows_%E2%80%93_Part_2.jpg\n",
-      "http://www.wikidata.org/entity/Q18486020\n",
-      "http://www.wikidata.org/entity/Q20977110\n",
-      "130 //upload.wikimedia.org/wikipedia/en/a/af/Star_Wars_The_Rise_of_Skywalker_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q161678\n",
-      "204 //upload.wikimedia.org/wikipedia/en/thumb/2/2d/Harry_Potter_and_the_Deathly_Hallows_%E2%80%93_Part_1.jpg/220px-Harry_Potter_and_the_Deathly_Hallows_%E2%80%93_Part_1.jpg\n",
-      "http://www.wikidata.org/entity/Q36479\n",
-      "214 //upload.wikimedia.org/wikipedia/en/thumb/3/3d/The_Lion_King_poster.jpg/220px-The_Lion_King_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q132863\n",
-      "245 //upload.wikimedia.org/wikipedia/en/thumb/2/29/Finding_Nemo.jpg/220px-Finding_Nemo.jpg\n",
-      "http://www.wikidata.org/entity/Q485983\n",
-      "258 //upload.wikimedia.org/wikipedia/en/b/b9/Shrek_2_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q6144664\n",
-      "333 //upload.wikimedia.org/wikipedia/en/0/0a/Inside_Out_%282015_film%29_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q486588\n",
-      "384 //upload.wikimedia.org/wikipedia/en/2/22/Shrek_the_Third_%282007_animated_feature_film%29.jpg\n",
-      "http://www.wikidata.org/entity/Q208131\n",
-      "461 //upload.wikimedia.org/wikipedia/en/thumb/7/70/Shrek_Forever_After_%282010_animated_feature_film%29.jpg/220px-Shrek_Forever_After_%282010_animated_feature_film%29.jpg\n",
-      "http://www.wikidata.org/entity/Q174811\n",
-      "490 //upload.wikimedia.org/wikipedia/en/thumb/0/05/Up_%282009_film%29.jpg/220px-Up_%282009_film%29.jpg\n",
-      "http://www.wikidata.org/entity/Q65972529\n",
-      "495 //upload.wikimedia.org/wikipedia/en/thumb/a/a2/Nezha_film_poster.jpg/220px-Nezha_film_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q29466808\n",
-      "500 //upload.wikimedia.org/wikipedia/en/thumb/2/2b/F9_film_poster.jpg/220px-F9_film_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q60506\n",
-      "509 //upload.wikimedia.org/wikipedia/en/thumb/c/c2/Breaking_Dawn_Part_1_Poster.jpg/220px-Breaking_Dawn_Part_1_Poster.jpg\n",
-      "http://www.wikidata.org/entity/Q76448600\n",
-      "553 //upload.wikimedia.org/wikipedia/en/thumb/b/b4/Spider-Man-_Across_the_Spider-Verse_poster.jpg/220px-Spider-Man-_Across_the_Spider-Verse_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q18647981\n",
-      "557 //upload.wikimedia.org/wikipedia/en/thumb/2/26/Moana_Teaser_Poster.jpg/220px-Moana_Teaser_Poster.jpg\n",
-      "http://www.wikidata.org/entity/Q213326\n",
-      "637 //upload.wikimedia.org/wikipedia/en/thumb/2/27/The_Incredibles_%282004_animated_feature_film%29.jpg/220px-The_Incredibles_%282004_animated_feature_film%29.jpg\n",
-      "http://www.wikidata.org/entity/Q188474\n",
-      "693 //upload.wikimedia.org/wikipedia/en/thumb/7/7f/Madagascar2poster.jpg/220px-Madagascar2poster.jpg\n",
-      "http://www.wikidata.org/entity/Q61876370\n",
-      "751 //upload.wikimedia.org/wikipedia/en/thumb/e/ed/Mission-_Impossible_%E2%80%93_Dead_Reckoning_Part_One_poster.jpg/220px-Mission-_Impossible_%E2%80%93_Dead_Reckoning_Part_One_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q324262\n",
-      "774 //upload.wikimedia.org/wikipedia/en/thumb/2/2a/Puss_in_Boots_%282011_animated_feature_film%29.jpg/220px-Puss_in_Boots_%282011_animated_feature_film%29.jpg\n",
-      "http://www.wikidata.org/entity/Q4447\n",
-      "813 //upload.wikimedia.org/wikipedia/en/thumb/c/c0/Despicable_Me_%282010_animated_feature_film%29.jpg/220px-Despicable_Me_%282010_animated_feature_film%29.jpg\n",
-      "http://www.wikidata.org/entity/Q174555\n",
-      "824 //upload.wikimedia.org/wikipedia/en/thumb/3/36/Madagascar_Theatrical_Poster.jpg/220px-Madagascar_Theatrical_Poster.jpg\n",
-      "http://www.wikidata.org/entity/Q126796\n",
-      "833 //upload.wikimedia.org/wikipedia/en/thumb/9/96/Brave_Poster.jpg/220px-Brave_Poster.jpg\n",
-      "http://www.wikidata.org/entity/Q182254\n",
-      "845 //upload.wikimedia.org/wikipedia/en/thumb/d/d5/The_Simpsons_Movie_%282007%29.png/220px-The_Simpsons_Movie_%282007%29.png\n",
-      "http://www.wikidata.org/entity/Q104905\n",
-      "900 //upload.wikimedia.org/wikipedia/en/thumb/4/4c/WALL-E_poster.jpg/220px-WALL-E_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q215518\n",
-      "922 //upload.wikimedia.org/wikipedia/en/thumb/b/bd/Aladdin_%281992_Disney_film%29_poster.jpg/220px-Aladdin_%281992_Disney_film%29_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q373096\n",
-      "944 //upload.wikimedia.org/wikipedia/en/9/99/How_to_Train_Your_Dragon_Poster.jpg\n",
-      "http://www.wikidata.org/entity/Q483815\n",
-      "968 //upload.wikimedia.org/wikipedia/en/7/7b/Shrek_%282001_animated_feature_film%29.jpg\n",
-      "http://www.wikidata.org/entity/Q112801489\n",
-      "978 //upload.wikimedia.org/wikipedia/en/thumb/4/4d/Elemental_final_poster.jpg/220px-Elemental_final_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q31271384\n",
-      "1006 //upload.wikimedia.org/wikipedia/en/thumb/7/78/Puss_in_Boots_The_Last_Wish_poster.jpg/220px-Puss_in_Boots_The_Last_Wish_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q96376192\n",
-      "1105 //upload.wikimedia.org/wikipedia/en/thumb/2/21/Kimetsu_no_Yaiba_Mugen_Ressha_Hen_Poster.jpg/220px-Kimetsu_no_Yaiba_Mugen_Ressha_Hen_Poster.jpg\n",
-      "http://www.wikidata.org/entity/Q208696\n",
-      "1126 //upload.wikimedia.org/wikipedia/en/thumb/4/4f/Tarzan_%281999_film%29_-_theatrical_poster.jpg/220px-Tarzan_%281999_film%29_-_theatrical_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q179673\n",
-      "1205 //upload.wikimedia.org/wikipedia/en/thumb/5/5e/Beauty_and_the_Beast_%281991_film%29_poster.jpg/220px-Beauty_and_the_Beast_%281991_film%29_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q305250\n",
-      "1397 //upload.wikimedia.org/wikipedia/en/thumb/3/3c/Ice_Age_%282002_film%29_poster.jpg/220px-Ice_Age_%282002_film%29_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q21697406\n",
-      "1405 //upload.wikimedia.org/wikipedia/en/thumb/0/0b/Your_Name_poster.png/220px-Your_Name_poster.png\n",
-      "http://www.wikidata.org/entity/Q681918\n",
-      "1412 //upload.wikimedia.org/wikipedia/en/thumb/7/76/Monsters-vs-aliens-poster.jpg/220px-Monsters-vs-aliens-poster.jpg\n",
-      "http://www.wikidata.org/entity/Q120367\n",
-      "1445 //upload.wikimedia.org/wikipedia/en/thumb/0/0d/Movie_poster_Shark_Tale.jpg/220px-Movie_poster_Shark_Tale.jpg\n",
-      "http://www.wikidata.org/entity/Q980041\n",
-      "1453 //upload.wikimedia.org/wikipedia/en/thumb/a/a1/The_Adventures_of_Tintin_-_Secret_of_the_Unicorn.jpg/220px-The_Adventures_of_Tintin_-_Secret_of_the_Unicorn.jpg\n",
-      "http://www.wikidata.org/entity/Q155653\n",
-      "1584 //upload.wikimedia.org/wikipedia/en/thumb/d/db/Spirited_Away_Japanese_poster.png/220px-Spirited_Away_Japanese_poster.png\n",
-      "http://www.wikidata.org/entity/Q17615920\n",
-      "http://www.wikidata.org/entity/Q245366\n",
-      "1728 //upload.wikimedia.org/wikipedia/en/thumb/f/f7/Over_the_Hedge_Poster.jpg/220px-Over_the_Hedge_Poster.jpg\n",
-      "http://www.wikidata.org/entity/Q16781911\n",
-      "1820 //upload.wikimedia.org/wikipedia/en/thumb/6/6f/Taken_3_poster.jpg/220px-Taken_3_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q115589138\n",
-      "http://www.wikidata.org/entity/Q81205\n",
-      "1842 //upload.wikimedia.org/wikipedia/en/thumb/8/89/Megamind2010Poster.jpg/220px-Megamind2010Poster.jpg\n",
-      "http://www.wikidata.org/entity/Q630032\n",
-      "2066 //upload.wikimedia.org/wikipedia/en/thumb/8/8b/Horton_Hears_a_Who%21.jpg/220px-Horton_Hears_a_Who%21.jpg\n",
-      "http://www.wikidata.org/entity/Q663014\n",
-      "2110 //upload.wikimedia.org/wikipedia/en/thumb/5/5f/Dr_dolittle_movie_1998.jpg/220px-Dr_dolittle_movie_1998.jpg\n",
-      "http://www.wikidata.org/entity/Q275167\n",
-      "2112 //upload.wikimedia.org/wikipedia/en/thumb/5/5f/Bee_Movie_%282007_animated_feature_film%29.jpg/220px-Bee_Movie_%282007_animated_feature_film%29.jpg\n",
-      "http://www.wikidata.org/entity/Q36092\n",
-      "2260 //upload.wikimedia.org/wikipedia/en/thumb/c/c6/LiloandStitchmovieposter.jpg/220px-LiloandStitchmovieposter.jpg\n",
-      "http://www.wikidata.org/entity/Q43051\n",
-      "2302 //upload.wikimedia.org/wikipedia/en/thumb/8/88/Walt_Disney%27s_Bambi_poster.jpg/220px-Walt_Disney%27s_Bambi_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q171300\n",
-      "2307 //upload.wikimedia.org/wikipedia/en/thumb/8/81/The_Princess_and_the_Frog_poster.jpg/220px-The_Princess_and_the_Frog_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q756238\n",
-      "2352 //upload.wikimedia.org/wikipedia/en/thumb/f/f2/Robots2005Poster.jpg/220px-Robots2005Poster.jpg\n",
-      "http://www.wikidata.org/entity/Q103372692\n",
-      "2409 //upload.wikimedia.org/wikipedia/en/thumb/8/83/Encanto_poster.jpg/220px-Encanto_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q32930008\n",
-      "2420 cywiki: //upload.wikimedia.org/wikipedia/commons/thumb/8/8a/OOjs_UI_icon_edit-ltr-progressive.svg/10px-OOjs_UI_icon_edit-ltr-progressive.svg.png\n",
-      "http://www.wikidata.org/entity/Q271189\n",
-      "2455 //upload.wikimedia.org/wikipedia/en/thumb/6/65/Hercules_%281997_film%29_poster.jpg/220px-Hercules_%281997_film%29_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q215365\n",
-      "2485 //upload.wikimedia.org/wikipedia/en/thumb/8/86/Brother_Bear_Poster.png/220px-Brother_Bear_Poster.png\n",
-      "http://www.wikidata.org/entity/Q97288428\n",
-      "2497 //upload.wikimedia.org/wikipedia/en/thumb/0/00/The_Bad_Guys_poster.jpeg/220px-The_Bad_Guys_poster.jpeg\n",
-      "http://www.wikidata.org/entity/Q15982441\n",
-      "2523 //upload.wikimedia.org/wikipedia/en/thumb/7/77/Peanuts_2015.jpg/220px-Peanuts_2015.jpg\n",
-      "http://www.wikidata.org/entity/Q275432\n",
-      "2528 //upload.wikimedia.org/wikipedia/en/thumb/6/6d/Rango2011Poster.jpg/220px-Rango2011Poster.jpg\n",
-      "http://www.wikidata.org/entity/Q1144330\n",
-      "2553 //upload.wikimedia.org/wikipedia/en/thumb/9/99/Question_book-new.svg/50px-Question_book-new.svg.png\n",
-      "http://www.wikidata.org/entity/Q76780267\n",
-      "2609 //upload.wikimedia.org/wikipedia/en/thumb/9/95/Legend_of_Deification_poster.jpg/220px-Legend_of_Deification_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q29011\n",
-      "2633 //upload.wikimedia.org/wikipedia/en/thumb/a/a0/Howls-moving-castleposter.jpg/220px-Howls-moving-castleposter.jpg\n",
-      "http://www.wikidata.org/entity/Q104409058\n",
-      "http://www.wikidata.org/entity/Q156401\n",
-      "2789 //upload.wikimedia.org/wikipedia/en/thumb/0/00/Chicken_run_ver1.jpg/220px-Chicken_run_ver1.jpg\n",
-      "http://www.wikidata.org/entity/Q245227\n",
-      "2862 //upload.wikimedia.org/wikipedia/en/thumb/6/6c/Prince_of_egypt_ver2.jpg/220px-Prince_of_egypt_ver2.jpg\n",
-      "http://www.wikidata.org/entity/Q165512\n",
-      "2918 //upload.wikimedia.org/wikipedia/en/thumb/c/cd/One_Hundred_and_One_Dalmatians_movie_poster.jpg/220px-One_Hundred_and_One_Dalmatians_movie_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q30607974\n",
-      "2955 //upload.wikimedia.org/wikipedia/en/thumb/e/e8/Smallfoot_%28film%29.png/220px-Smallfoot_%28film%29.png\n",
-      "http://www.wikidata.org/entity/Q868177\n",
-      "3018 //upload.wikimedia.org/wikipedia/en/thumb/2/29/Battle_Los_Angeles_Poster.jpg/220px-Battle_Los_Angeles_Poster.jpg\n",
-      "http://www.wikidata.org/entity/Q116905\n",
-      "3032 //upload.wikimedia.org/wikipedia/en/thumb/c/cb/A_Series_Of_Unfortunate_Events_poster.jpg/220px-A_Series_Of_Unfortunate_Events_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q190135\n",
-      "3036 //upload.wikimedia.org/wikipedia/en/c/c0/The_Little_Mermaid_%28Official_1989_Film_Poster%29.png\n",
-      "http://www.wikidata.org/entity/Q199839\n",
-      "3096 //upload.wikimedia.org/wikipedia/en/thumb/1/1d/Thejunglebook_movieposter.jpg/220px-Thejunglebook_movieposter.jpg\n",
-      "http://www.wikidata.org/entity/Q4253250\n",
-      "3105 //upload.wikimedia.org/wikipedia/en/thumb/a/ab/JourneytotheWestConqueringtheDemons.jpg/220px-JourneytotheWestConqueringtheDemons.jpg\n",
-      "http://www.wikidata.org/entity/Q236728\n",
-      "3123 //upload.wikimedia.org/wikipedia/en/thumb/5/51/Ponyo.png/220px-Ponyo.png\n",
-      "http://www.wikidata.org/entity/Q54825652\n",
-      "3133 //upload.wikimedia.org/wikipedia/en/thumb/3/39/The_Addams_Family_%282019_film%29.png/220px-The_Addams_Family_%282019_film%29.png\n",
-      "http://www.wikidata.org/entity/Q550196\n",
-      "3282 //upload.wikimedia.org/wikipedia/en/thumb/0/01/Spy_Kids_3-D_movie_poster.jpg/220px-Spy_Kids_3-D_movie_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q318428\n",
-      "3320 //upload.wikimedia.org/wikipedia/en/thumb/f/f2/Wallace_gromit_were_rabbit_poster.jpg/220px-Wallace_gromit_were_rabbit_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q59692464\n",
-      "3352 //upload.wikimedia.org/wikipedia/en/thumb/6/66/Weathering_with_You_Poster.jpg/220px-Weathering_with_You_Poster.jpg\n",
-      "http://www.wikidata.org/entity/Q1129381\n",
-      "3393 //upload.wikimedia.org/wikipedia/en/thumb/6/6c/XFilesMoviePoster.jpg/220px-XFilesMoviePoster.jpg\n",
-      "http://www.wikidata.org/entity/Q109638221\n",
-      "3434 //upload.wikimedia.org/wikipedia/en/thumb/4/44/One_Piece_Film_Red_Visual_Poster.jpg/220px-One_Piece_Film_Red_Visual_Poster.jpg\n",
-      "http://www.wikidata.org/entity/Q221947\n",
-      "3449 //upload.wikimedia.org/wikipedia/en/thumb/b/ba/Junglebook2_movieposter.jpg/220px-Junglebook2_movieposter.jpg\n",
-      "http://www.wikidata.org/entity/Q318975\n",
-      "3457 //upload.wikimedia.org/wikipedia/en/thumb/d/de/Atlantis_The_Lost_Empire_poster.jpg/220px-Atlantis_The_Lost_Empire_poster.jpg\n",
-      "http://www.wikidata.org/entity/Q134430\n",
-      "3484 //upload.wikimedia.org/wikipedia/en/thumb/4/49/Snow_White_1937_poster.png/220px-Snow_White_1937_poster.png\n",
-      "http://www.wikidata.org/entity/Q7752052\n",
-      "3548 //upload.wikimedia.org/wikipedia/en/thumb/c/ca/TheMonkeyKing.jpg/220px-TheMonkeyKing.jpg\n",
-      "http://www.wikidata.org/entity/Q96575659\n",
-      "3566 //upload.wikimedia.org/wikipedia/en/thumb/8/87/Impasse.jpg/220px-Impasse.jpg\n"
+      "http://www.wikidata.org/entity/Q18486021\n",
+      "64 //upload.wikimedia.org/wikipedia/en/7/7f/Star_Wars_The_Last_Jedi.jpg\n",
+      "http://www.wikidata.org/entity/Q218894\n",
+      "1695 //upload.wikimedia.org/wikipedia/en/5/57/Pocahontasposter.jpg\n",
+      "http://www.wikidata.org/entity/Q213787\n",
+      "1823 //upload.wikimedia.org/wikipedia/en/2/26/The_Hunchback_of_Notre_Dame_1996_poster.jpg\n",
+      "http://www.wikidata.org/entity/Q104409060\n",
+      "2761 //upload.wikimedia.org/wikipedia/en/thumb/f/f9/Lightyear_%28film%29_poster.jpg/220px-Lightyear_%28film%29_poster.jpg\n"
      ]
     }
    ],
@@ -459,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +639,7 @@
        "[3598 rows x 15 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
